Rename landing.html to task.html and add logout function

--- a/index.css
+++ b/index.css
@@ -2,8 +2,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Mabry pro", sans-serif;
 }
 
 input[ng-disabled="true"] {
     cursor: not-allowed !important;
+}
+
+.top-navbar {
+    display: flex;
+    list-style-type: none;
+    margin: 5px 10px;
+    padding: 3px 10px;
+}
+
+.top-navbar li {
+    display: inline-block;
+    margin: 15px 10px;
+}
+
+.top-navbar li a{
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
