--- a/views/task.html
+++ b/views/task.html
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="col-3" ng-repeat="task in tasks">
+    <div class="col-3 mx-2 px-4" ng-repeat="task in tasks">
         <h5>{{ task.attributes.title }}</h5>
         <p>{{ task.attributes.description }}</p>
         <p>{{ task.attributes.status }}</p>
-        <date>{{ task.attributes.deadline }}</date>
-        <date>{{ task.attributes.created }}</date>
-        <date>{{ task.attributes.modified }}</date>
+        <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
+        <p>Created: <time>{{ task.attributes.created }}</time></p>
+        <p>Last modified: <time>{{ task.attributes.modified }}</time></p>
         <p>Active: {{ task.attributes.is_active }}</p>
     </div>
 </div>
