--- a/views/task.html
+++ b/views/task.html
@@ -9,3 +9,6 @@
         <p>Active: {{ task.attributes.is_active }}</p>
     </div>
 </div>
+<div class="d-flex justify-content-end">
+    <a href="#">+</a>
+</div>
