Add create task

--- a/views/register.html
+++ b/views/register.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column justify-content-center align-items-center">
-    <span class="align-self-end mr-5 pr-5"><a href="#!/">Back</a></span>
+    <span class="align-self-end mr-5 pr-5"><a href="#!/"><i class='bx bx-arrow-back'></i></a></span>
 
     <h2>Register here</h2>
     <span class="text-danger" ng-show="errorMessage">{{ errorMessage }}</span>
