--- a/views/createTask.html
+++ b/views/createTask.html
@@ -16,7 +16,7 @@
           </div>
         <div class="d-flex justify-content-end">
             <button type="submit" class="btn btn-primary ml-1">Save</button>
-            <a href="#!/task" type="submit" class="btn btn-danger ml-1">Cancel</a>
+            <button ng-click="cancel()" class="btn btn-danger ml-1">Cancel</button>
         </div>
       </form>
 </div>
