--- a/views/taskView.html
+++ b/views/taskView.html
@@ -1,9 +1,12 @@
 <div class="d-flex flex-column justify-content-center align-items-center p-5 m-5 border">
+  
     <div ng-show="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="alert-error">
       {{ errorMessage }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <!-- <span class="text-danger" ng-show="errorMessage">{{ errorMessage }}</span> -->
+
+    <span class="text-danger" ng-show="taskDoesNotExistError">{{ taskDoesNotExistError }}</span>
+
     <form class="w-50">
         <div class="form-group">
           <label for="title">Title</label>
