--- a/views/task.html
+++ b/views/task.html
@@ -3,8 +3,8 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 <!-- <span class="text-success" ng-show="successMessage">{{ successMessage }}</span> -->
-<div class="row">
-    <div class="col-3 mx-2 px-4" ng-repeat="task in tasks">
+<div class="row px-2 mx-2">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 my-4" ng-repeat="task in tasks">
         <h5>{{ task.attributes.title }}</h5>
         <p>{{ task.attributes.description }}</p>
         <p>{{ task.attributes.status }}</p>
@@ -12,7 +12,8 @@
         <p>Created: <time>{{ task.attributes.created }}</time></p>
         <p>Last modified: <time>{{ task.attributes.modified }}</time></p>
         <p>Active: {{ task.attributes.is_active }}</p>
-        <a href="#!/task/{{ task.id }}" class="btn btn-primary">More details</a>
+        <a href="#!/task/{{ task.id }}" class="btn btn-primary" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
+        <a href="#!/task/delete/{{ task.id }}" class="btn btn-danger" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
     </div>
 </div>
 <div class="d-flex justify-content-end">
