--- a/views/task.html
+++ b/views/task.html
@@ -1,24 +1,61 @@
+<!-- <div class="position-fixed top-0 right-0 p-3" style="z-index: 5; right: 0; bottom: 0;">
+  <div ng-if="successMessage" id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="2000">
+    <div class="toast-header">
+      <h5>TaskMaster</h5>
+    </div>
+    <div class="toast-body">
+        {{ successMessage }}
+    </div>
+  </div>
+</div> -->
+
 <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
     {{ successMessage }}
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
+
 <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="alert-error">
     {{ errorMessage }}
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
+
 <!-- <span class="text-success" ng-show="successMessage">{{ successMessage }}</span> -->
+
+<div class="modal" tabindex="-1" id="deleteModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Confirm</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete this task?</p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="confirmDelete=true; deleteTask()">Yes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+</div>
+
 <div class="row px-2 mx-2">
     <div class="col-lg-3 col-md-4 col-sm-6 col-12 my-4" ng-repeat="task in tasks">
         <h5>{{ task.attributes.title }}</h5>
         <p>{{ task.attributes.description }}</p>
-        <p>{{ task.attributes.status }}</p>
         <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
-        <!-- <p>Created: <time>{{ task.attributes.created }}</time></p> -->
-        <p>Last modified: <time>{{ task.attributes.modified }}</time></p>
+        <p>Created: {{ dateCreated }} <time>{{ task.attributes.created }}</time></p>
+        <p>Modified: {{ dateModified }} <time>{{ task.attributes.modified }}</time></p>
         <p>Active: {{ task.attributes.is_active }}</p>
+
         <a href="#!/task/{{ task.id }}" class="btn btn-primary" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
+
         <a href="#!/task/delete/{{ task.id }}" class="btn btn-danger" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
+
         <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true }}" class="btn btn-warning" title="Archive"><i class='bx bx-archive-in'></i></button>
+
         <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false }}" class="btn btn-info" title="Activate"><i class='bx bx-archive-out'></i></button>
     </div>
 </div>
