--- a/views/taskView.html
+++ b/views/taskView.html
@@ -1,11 +1,16 @@
 <div class="d-flex flex-column justify-content-center align-items-center p-5 m-5 border">
 
-    <div ng-show="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="alert-error">
+    <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
       {{ errorMessage }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
-    <span class="text-danger" ng-show="taskDoesNotExistError">{{ taskDoesNotExistError }}</span>
+    <div ng-if="taskDoesNotExistError" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
+      {{ taskDoesNotExistError }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
+    <!-- <span class="text-danger" ng-show="taskDoesNotExistError">{{ taskDoesNotExistError }}</span> -->
 
     <form class="w-50">
         <div class="form-group">
@@ -23,10 +28,6 @@
         <div class="form-group">
             <label for="status">status</label>
             <input ng-model="specificTask.status" type="text" class="form-control" id="status" ng-readonly="readOnly">
-        </div>
-        <div class="d-flex justify-content-between my-3">
-            <small>Date created: {{ specificTask.created.slice(0, 10) }}</small>
-            <small>Date modified: {{ specificTask.modified.slice(0, 10) }}</small>
         </div>
         <div class="d-flex justify-content-end">
             <button ng-click="toggleReadOnly()" class="btn btn-success ml-1">Edit</button>
