--- a/views/logout.html
+++ b/views/logout.html
@@ -1,4 +1,4 @@
-<div class="modal" tabindex="-1" id="logoutModal">
+<div class="modal" tabindex="-1" id="logoutModal" data-backdrop="static">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
