--- a/views/noteView.html
+++ b/views/noteView.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column justify-content-center align-items-center p-5 m-5 border">
 
-    <!-- <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
-      {{ errorMessage }}
+    <div ng-if="noteErrorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
+      {{ noteErrorMessage }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div> -->
+    </div>
 
     <div ng-if="noteDoesNotExistError" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
       {{ noteDoesNotExistError }}
@@ -21,7 +21,7 @@
         </div>
         <div class="d-flex justify-content-end">
             <button ng-click="toggleReadOnly()" class="btn btn-success ml-1">Edit</button>
-            <button type="submit" class="btn btn-primary ml-1" ng-disabled="readOnly">Save</button>
+            <button ng-click="updateNote(specificNote.id)" type="submit" class="btn btn-primary ml-1" ng-disabled="readOnly">Save</button>
             <button ng-click="goBackToPreviousRoute()" class="btn btn-danger ml-1">Cancel</button>
         </div>
       </form>
