--- a/views/note.html
+++ b/views/note.html
@@ -3,7 +3,32 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 
+<div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="alert-error">
+    {{ errorMessage }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+
 <!-- <span class="text-success" ng-show="successMessage">{{ successMessage }}</span> -->
+
+<div class="modal" tabindex="-1" id="deleteModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Confirm</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete this note?</p>
+        </div>
+        <div class="modal-footer">
+            <button ng-click="confirmDelete=true; deleteNote()" type="button" class="btn btn-primary" data-dismiss="modal" >Yes</button>
+            <button ng-click="goBackToPreviousRoute()" type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+</div>
 
 <div class="row px-2 mx-2">
     <div class="col-lg-3 col-md-4 col-sm-6 col-12 my-4" ng-repeat="note in notes">
@@ -13,6 +38,8 @@
         <p>Last modified: <time>{{ note.attributes.modified }}</time></p>
 
         <a href="#!/note/{{ note.id }}" class="btn btn-primary" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
+
+        <a href="#!/note/delete/{{ note.id }}" class="btn btn-danger" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
     </div>
 </div>
 
