--- a/views/task.html
+++ b/views/task.html
@@ -42,7 +42,7 @@
 </div>
 
 <div class="row px-2 mx-2">
-    <div class="col-lg-3 col-md-4 col-sm-6 col-12 my-4" ng-repeat="task in tasks">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12 my-4 p-1" ng-repeat="task in tasks">
         <h5>{{ task.attributes.title }}</h5>
         <p>{{ task.attributes.description }}</p>
         <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
@@ -50,13 +50,16 @@
         <p>Modified: {{ dateModified }} <time>{{ task.attributes.modified }}</time></p>
         <p>Active: {{ task.attributes.is_active }}</p>
 
-        <a href="#!/task/{{ task.id }}" class="btn btn-primary" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
+        <div class="d-flex justify-content-center">
+          <a href="#!/task/{{ task.id }}" class="btn btn-primary mx-1" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
 
-        <a href="#!/task/delete/{{ task.id }}" class="btn btn-danger" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
+          <a href="#!/task/delete/{{ task.id }}" class="btn btn-danger mx-1" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
 
-        <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true }}" class="btn btn-warning" title="Archive"><i class='bx bx-archive-in'></i></button>
+          <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true }}" class="btn btn-warning mx-1" title="Archive"><i class='bx bx-archive-in'></i></button>
 
-        <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false }}" class="btn btn-info" title="Activate"><i class='bx bx-archive-out'></i></button>
+          <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false }}" class="btn btn-info mx-1" title="Activate"><i class='bx bx-archive-out'></i></button>
+        </div>
+        
     </div>
 </div>
 
