Fix conditional rendering of add task button

--- a/views/task.html
+++ b/views/task.html
@@ -65,5 +65,5 @@
 </div>
 
 <div class="d-flex justify-content-end">
-    <a href="#!/create-task"><i class='bx bx-plus-circle bx-flip-vertical' ></i></a>
+    <a ng-show="isAdmin == 'false' || isAdmin == false" href="#!/create-task"><i class='bx bx-plus-circle bx-flip-vertical' ></i></a>
 </div>
