--- a/views/landing.html
+++ b/views/landing.html
@@ -1,6 +1,10 @@
 <div class="row py-5 my-5" ng-controller="LoginController">
     <span class="text-danger offset-6 col-6" ng-show="loginError">{{ loginError }}</span>
-    <span class="text-success offset-6 col-6" ng-show="successMessage">{{ successMessage }}</span>
+
+    <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-50" role="alert" id="register-success">
+      {{ successMessage }}
+    </div>
+
     <form ng-submit="loginUser()" name="loginForm" class="w-25 py-5 my-5 offset-6 col-6" novalidate>
         <div class="form-group">
           <label for="username">Username</label>
