--- a/views/taskView.html
+++ b/views/taskView.html
@@ -5,9 +5,8 @@
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
-    <div ng-if="taskDoesNotExistError" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
+    <div ng-if="taskDoesNotExistError" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="task-does-not-exist-error">
       {{ taskDoesNotExistError }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
     <!-- <span class="text-danger" ng-show="taskDoesNotExistError">{{ taskDoesNotExistError }}</span> -->
