Arrange error handler of post API call on createNote to catch and fix success and error alert

--- a/views/createNote.html
+++ b/views/createNote.html
@@ -1,9 +1,8 @@
 <div class="d-flex flex-column justify-content-center align-items-center p-5 m-5 border">
     <h2>Create new note</h2>
     
-    <div ng-if="noteErrorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
+    <div ng-if="noteErrorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="note-error">
       {{ noteErrorMessage }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
     <!-- <span class="text-danger" ng-show="errorMessage">{{ errorMessage }}</span> -->
