Arrange error handler of get API call on getSpecificNote to catch and fix NoteDoesNotExistError alert

--- a/views/noteView.html
+++ b/views/noteView.html
@@ -5,9 +5,8 @@
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
-    <div ng-if="noteDoesNotExistError" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
+    <div ng-if="noteDoesNotExistError" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="note-does-not-exists-error">
       {{ noteDoesNotExistError }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
     <form class="w-50">
