--- a/views/noteView.html
+++ b/views/noteView.html
@@ -1,8 +1,7 @@
 <div class="d-flex flex-column justify-content-center align-items-center p-5 m-5 border">
 
-    <div ng-if="noteErrorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="alert-error">
+    <div ng-if="noteErrorMessage" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="note-error">
       {{ noteErrorMessage }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
     <div ng-if="noteDoesNotExistError" class="alert alert-danger alert-dismissible fade show w-50" role="alert" id="note-does-not-exists-error">
