--- a/views/users.html
+++ b/views/users.html
@@ -15,6 +15,6 @@
 
         <button ng-show="user.attributes.is_superuser == false" ng-click="setAsAdmin(user.id)" class="btn btn-primary" title="Set user as admin"><i class='bx bx-user-plus'></i></button>
 
-        <button ng-show="user.attributes.is_superuser == true" ng-click="setAsNormalUser(user.id)" class="btn btn-info" title="Set as normal user"><i class='bx bx-user-x'></i></button>
+        <button ng-show="user.attributes.is_superuser == true && user.attributes.username != 'edmar'" ng-click="setAsNormalUser(user.id)" class="btn btn-info" title="Set as normal user"><i class='bx bx-user-x'></i></button>
     </div>
 </div>
