--- a/index.css
+++ b/index.css
@@ -57,3 +57,50 @@ button[disabled="disabled"] {
     font-size: 1.5rem;
 }
 
+#login-title {
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 35px;
+    letter-spacing: 0.05em;
+    text-align: center;
+    margin: 50px 0;
+    padding: 10px 0;
+}
+
+.login-form {
+    transform: translateY(10%);
+}
+
+.login-form-border {
+    border-left: 4px solid black;
+    border-bottom: 4px solid black;
+}
+
+.username-password-label {
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 25px;
+    letter-spacing: 0.05em;
+    margin: 20px 0;
+}
+
+#username, #password {
+    border-radius: 10px !important;
+    border: 3px solid black;
+    background-color: white;
+}
+
+input[type="submit"], input[type="submit"]:focus{
+    background: #23A094;
+    border: 3px solid #000000;
+    box-shadow: 5px 5px 0px #000000;
+    border-radius: 10px;
+    width: 100%;
+}
+
+input[type="submit"]:hover {
+    background: #FF90E8;
+    border: 3px solid #000000;
+    color: black;
+}
+
