--- a/index.css
+++ b/index.css
@@ -71,8 +71,12 @@ button[disabled="disabled"] {
     transform: translateY(10%);
 }
 
-.login-form-border {
+.login-form-layout {
     border-left: 4px solid black;
+    background-color: #FFC900;
+}
+
+.first-row {
     border-bottom: 4px solid black;
 }
 
@@ -102,5 +106,113 @@ input[type="submit"]:hover {
     background: #FF90E8;
     border: 3px solid #000000;
     color: black;
+}
+
+.landing-page-intro {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.text-container {
+    margin: 50px auto;
+}
+
+.text-layout {
+    font-weight: 500;
+    font-size: 45px;
+    line-height: 45px;
+    text-align: center;
+    letter-spacing: 0.1em;
+}
+
+.first-note {
+    width: 203px;
+    height: 200px;
+    left: 558px;
+    top: 370px;
+    background: #FF90E8;
+}
+
+.second-note {
+    width: 199px;
+    height: 106px;
+    left: 284px;
+    top: 771px;
+    background: #23A094;
+}
+
+.third-note {
+    width: 226px;
+    height: 213px;
+    left: 25px;
+    top: 664px;
+    background: #E2442F;
+}
+
+.fourth-note {
+    width: 193px;
+    height: 205px;
+    left: -29px;
+    top: 292px;
+    background: #FF90E8;
+}
+
+.first-task {
+    width: 228px;
+    height: 236px;
+    left: 522px;
+    top: 605px;
+    background: #E2442F;
+}
+
+.second-task {
+    width: 169px;
+    height: 157px;
+    left: 307px;
+    top: 570px;
+    background: #FF90E8;
+}
+
+.third-task {
+    width: 108px;
+    height: 101px;
+    left: 429px;
+    top: 320px;
+    background: #FFC900;
+}
+
+.fourth-task {
+    width: 209px;
+    height: 195px;
+    left: 188px;
+    top: 338px;
+    background: #23A094;
+}
+
+.fifth-task {
+    width: 108px;
+    height: 129px;
+    left: 25px;
+    top: 530px;
+    background: #FFC900;
+}
+
+.image-layout {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: 3px solid black;
+}
+
+.image-layout #image-title {
+    font-weight: 500;
+}
+
+.image-layout #content {
+    text-align: center;
 }
 
