--- a/index.css
+++ b/index.css
@@ -114,7 +114,6 @@ input[type="submit"]:hover {
     flex-direction: column;
     overflow: hidden;
     flex-wrap: wrap;
-    height: 100vh;
 }
 
 .text-container {
@@ -265,6 +264,104 @@ input[type="submit"]:hover {
     text-align: center;
 }
 
+.sign-up-here-layout {
+    position: relative;
+    width: 100%;
+    background-color: #FF90E8;
+    overflow: hidden;
+}
+
+.sign-up-here-layout h2 {
+    font-weight: 500;
+    font-size: 45px;
+    line-height: 45px;
+    letter-spacing: 0.1em;
+}
+
+.sign-up-here-layout a {
+    display: inline-block;
+    width: 299px;
+    height: 48px;
+    background: #23A094;
+    border: 3px solid #000000;
+    box-shadow: 5px 5px 0px #000000;
+    border-radius: 10px;
+    text-align: center;
+    color: black;
+    font-weight: 400;
+    font-size: 20px;
+    letter-spacing: 0.1em;
+    margin: 15px auto;
+}
+
+.sign-up-here-layout a:hover {
+    text-decoration: none;
+    color: black;
+    background: #FFC900;
+}
+
+.sign-up-here-image-layout {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: 3px solid black;
+}
+
+.sign-up-here-image-layout hr {
+    width: 80%;
+    border: 2px solid black;
+}
+
+#sign-up-here-image-title {
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 25px;
+    letter-spacing: 0.05em;
+}
+
+.sign-up-here-first-note {
+    width: 299px;
+    height: 294px;
+    left: 1700px;
+    top: 243px;
+    background: #23A094;
+}
+
+.sign-up-here-second-note {
+    width: 199px;
+    height: 194px;
+    left: 838px;
+    top: 817px;
+    background: #FFC900;
+}
+
+.sign-up-here-third-note {
+    width: 268px;
+    height: 257px;
+    left: -55px;
+    top: 197px;
+    background: #FFC900;
+}
+
+.sign-up-here-first-task {
+    width: 268px;
+    height: 257px;
+    left: 1569px;
+    top: 730px;
+    background: #E2442F;
+}
+
+.sign-up-here-second-task {
+    width: 268px;
+    height: 257px;
+    left: 29px;
+    top: 751px;
+    background: #FFFFFF;
+}
+
 @media(max-width: 768px) {
     .landing-page-intro {
         height: 15vh;
@@ -278,5 +375,33 @@ input[type="submit"]:hover {
     .login-form-layout {
         border: 4px solid black;
         border-bottom: 0;
+    }
+    .sign-up-here-second-task {
+        left: -9px;
+    }
+    .sign-up-here-third-note {
+        left: -125px !important;
+    }
+}
+
+@media(max-width: 992px) {
+    .sign-up-here-first-note {
+        left: 850px;
+    }
+    .sign-up-here-second-note {
+        left: 438px;
+    }
+    .sign-up-here-first-task {
+        left: 769px;
+    }
+}
+
+@media(max-width: 576px) {
+    .sign-up-here-third-note {
+        left: -165px !important;
+    }
+    .sign-up-here-layout {
+        border: 4px solid black;
+        border-top: 0;
     }
 }
