--- a/views/landing.html
+++ b/views/landing.html
@@ -1,77 +1,62 @@
 <div class="row mx-0 min-vh-100 first-row" ng-controller="LoginController">
-
     <div class="col-md-12 col-lg-6 landing-page-intro px-0">
       <div class="text-container pt-3 pb-4">
         <h1 class="text-layout">Create your daily task</h1>
         <h1 class="text-layout">and take notes</h1>
       </div>
-
       <div class="d-flex">
         <div class="image-layout first-note">
           <p id="image-title">Note 1</p>
           <p id="content">Single or double quotation marks can be used on Python and JavaScript</p>
         </div>
-  
         <div class="image-layout second-note">
           <p id="image-title">Note 2</p>
           <p id="content">An arrow function in JavaScript does not have access to 'this' property</p>
         </div>
-  
         <div class="image-layout third-note">
           <p id="image-title">Note 3</p>
           <p id="content">Run python manage.py to migrate database changes in django</p>
         </div>
-  
         <div class="image-layout fourth-note">
           <p id="image-title">Note 4</p>
           <p id="content">Use the "git pull" command to update your local repository with changes from the remote repository.</p>
         </div>
-  
         <div class="image-layout fifth-note">
           <p id="image-title">Note 5</p>
           <p id="content">In Python, you can use the "zip" function to iterate over multiple lists in parallel.</p>
         </div>
-  
         <div class="image-layout first-task">
           <p id="image-title">Task 1</p>
           <p id="content">Create an ERD for the database</p>
         </div>
-  
         <div class="image-layout second-task">
           <p id="image-title">Task 2</p>
           <p id="content">Test the API endpoints</p>
         </div>
-  
         <div class="image-layout third-task">
           <p id="image-title">Task 3</p>
           <p id="content">Provide comments on your codebase</p>
         </div>
-  
         <div class="image-layout fourth-task">
           <p id="image-title">Task 4</p>
           <p id="content">Create a unit test for the new feature</p>
         </div>
-  
         <div class="image-layout fifth-task">
           <p id="image-title">Task 5</p>
           <p id="content">Refactor the existing codebase to implement the DRY (Don't Repeat Yourself) principle</p>
         </div>
-  
         <div class="image-layout sixth-task">
           <p id="image-title">Task 6</p>
           <p id="content">Write a script to scrape data from a website and save it to a CSV file</p>
         </div>
-  
         <div class="image-layout seventh-task">
           <p id="image-title">Task 7</p>
           <p id="content">Add authentication and authorization functionality to the web application using a framework like Django or Flask</p>
         </div>
-  
         <div class="image-layout eight-task">
           <p id="image-title">Task 8</p>
           <p id="content">Optimize database queries to reduce latency</p>
         </div>
-  
         <div class="image-layout ninth-task">
           <p id="image-title">Task 8</p>
           <p id="content">Refactor a function to improve performance</p>
@@ -104,9 +89,33 @@
     </div>
     
 </div>
-<div class="row mx-0 vh-100">
-  <div class="d-flex flex-column justify-content-center align-items-center w-100">
+<div class="row mx-0 min-vh-100">
+  <div class="d-flex flex-column justify-content-center align-items-center sign-up-here-layout">
     <h2>Sign up here</h2>
-    <a href="#!/register">Register</a>
+    <a href="#!/register" class="py-1">Register</a>
+    <div class="sign-up-here-image-layout sign-up-here-first-note">
+      <p id="sign-up-here-image-title">Notes</p>
+      <hr><hr><hr>
+    </div>
+
+    <div class="sign-up-here-image-layout sign-up-here-second-note">
+      <p id="sign-up-here-image-title">Notes</p>
+      <hr><hr><hr>
+    </div>
+
+    <div class="sign-up-here-image-layout sign-up-here-third-note">
+      <p id="sign-up-here-image-title">Notes</p>
+      <hr><hr><hr>
+    </div>
+
+    <div class="sign-up-here-image-layout sign-up-here-first-task">
+      <p id="sign-up-here-image-title">Task</p>
+      <hr><hr><hr>
+    </div>
+
+    <div class="sign-up-here-image-layout sign-up-here-second-task">
+      <p id="sign-up-here-image-title">Task</p>
+      <hr><hr><hr>
+    </div>
   </div>
 </div>
