--- a/index.css
+++ b/index.css
@@ -88,13 +88,13 @@ button[disabled="disabled"] {
     margin: 20px 0;
 }
 
-#username, #password {
+#username, #password, #firstname, #lastname, #email, #confirm-password {
     border-radius: 10px !important;
     border: 3px solid black;
     background-color: white;
 }
 
-input[type="submit"], input[type="submit"]:focus{
+input[type="submit"], input[type="submit"]:focus, input[type="submit"]:active {
     background: #23A094;
     border: 3px solid #000000;
     box-shadow: 5px 5px 0px #000000;
@@ -102,7 +102,7 @@ input[type="submit"], input[type="submit"]:focus{
     width: 100%;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover{
     background: #FF90E8;
     border: 3px solid #000000;
     color: black;
@@ -360,6 +360,58 @@ input[type="submit"]:hover {
     left: 29px;
     top: 751px;
     background: #FFFFFF;
+}
+
+#register-title {
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 35px;
+    letter-spacing: 0.05em;
+}
+
+.register-page-layout {
+    position: relative;
+    background: #FFC900;
+    height: 100vh;
+}
+
+.register-page-layout label {
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 25px;
+    letter-spacing: 0.05em;
+}
+
+.back-button {
+    position: absolute;
+    display: inline-block;
+    top: 180px;
+    right: 250px;
+    color: black;
+    border: 3px solid black;
+    padding: 0.7em;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 0px #000000;
+    background-color: #FF90E8;
+}
+
+.back-button:hover {
+    background: #23A094;
+}
+
+.back-button a {
+    color: black;
+    text-decoration: none;
+}
+
+.back-button a:hover {
+    color: inherit;
+}
+
+.bx {
+    font-size: 1.5rem !important;
 }
 
 @media(max-width: 768px) {
